syntax = "proto3";

message FuzzArgsProfile {
}

